# logging-wrapper

./: CMakeLists.txt  log_wrapper.podspec
includes/logger/: log.h
ios/logging.xcodeproj/: project.pbxproj
ios/logging.xcodeproj/project.xcworkspace/xcuserdata/guru.xcuserdatad/: UserInterfaceState.xcuserstate
ios/logging.xcodeproj/xcuserdata/guru.xcuserdatad/xcschemes/: xcschememanagement.plist
log-wrapper/: Android.mk
src/: log.cpp
